Fixing webkit overflow scrolling back to touch

--- a/core-styles/objects/_base.scss
+++ b/core-styles/objects/_base.scss
@@ -16,6 +16,7 @@ html {
     color: $base-font-color;
     font-size: 100%;
     -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
     background: $dark-color;
 
     &:after {
